Fix for exact searches

--- a/parrot_xDD.ipynb
+++ b/parrot_xDD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://geodeepdive.org/api/snippets?term=parrot management&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parrot+management&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=psittacid management&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=management of parrot&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=management of psittacid&clean&full_results\n",
@@ -73,7 +73,7 @@
     "route = 'snippets'\n",
     "\n",
     "#Set a term or loop through terms\n",
-    "terms = ['parrot management', 'psittacid management', 'management of parrot', 'management of psittacid', 'culling parrot', 'parrot cull', 'parrot control', 'manag* parrot*' , 'manag* psittacid*', 'parrot* cull','cull* parrot']\n",
+    "terms = ['parrot+management', 'psittacid+management', 'management+of+parrot', 'management+of+psittacid', 'culling+parrot', 'parrot+cull', 'parrot+control', 'manag*parrot*' , 'manag*psittacid*', 'parrot*cull','cull*parrot']\n",
     "\n",
     "\n",
     "for i in terms:\n",
