Update terms; add spanish terms (all failed)

--- a/parrot_xDD.ipynb
+++ b/parrot_xDD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,21 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://geodeepdive.org/api/snippets?term=\"parrot+management\"&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=parrot+management&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=psittacid management&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=management of parrot&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=management of psittacid&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=culling parrot&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=parrot cull&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=parrot control&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=manag* parrot*&clean&full_results\n"
+      "https://geodeepdive.org/api/snippets?term=\"management+of+parrot\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"managing+parrot\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"managing+psittacid\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=culling+parrot&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parrot+cull&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parrot+control&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"control+for+parrot\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parrot*cull&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"cull+of+parrot\"&clean&full_results\n"
      ]
     }
    ],
@@ -72,8 +75,28 @@
     "\n",
     "route = 'snippets'\n",
     "\n",
-    "#Set a term or loop through terms\n",
-    "terms = ['parrot+management', 'psittacid+management', 'management+of+parrot', 'management+of+psittacid', 'culling+parrot', 'parrot+cull', 'parrot+control', 'manag*parrot*' , 'manag*psittacid*', 'parrot*cull','cull*parrot']\n",
+    "#Set a term or loop through terms #this isn't doing exact phrase properly..\n",
+    "terms = ['\"parrot+management\"',\n",
+    "         'parrot+management', \n",
+    "         #'\"psittacid+management\"', # no results...\n",
+    "         #'psittacid+management', # no results...\n",
+    "         '\"management+of+parrot\"', \n",
+    "         #'\"management+of+psittacid\"', # no results...\n",
+    "         '\"managing+parrot\"' , # one medical result (parrot bites :D)...\n",
+    "         '\"managing+psittacid\"', # no results... \n",
+    "         'culling+parrot', # no results...\n",
+    "         'parrot+cull', # no results...\n",
+    "         'parrot+control', \n",
+    "         '\"control+for+parrot\"',\n",
+    "         'parrot*cull',# no results...\n",
+    "          '\"cull+of+parrot\"', # no results...\n",
+    "         # spanish/portugeuse terms\n",
+    "         #'conflicto*loros',  # no results...\n",
+    "         #'manejo+de+loros',  # no results...\n",
+    "         #'manejo+de+parabas',  # no results...\n",
+    "         #'cultivos*loros',  # no results...\n",
+    "         #'loros*plaga' # no results...\n",
+    "                  ]\n",
     "\n",
     "\n",
     "for i in terms:\n",
@@ -87,6 +110,13 @@
     "        json.dump(results, outfile)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
