New search terms
Add parakeet and eradication per Jane Anderson.

Update results

Update readme.

--- a/parrot_xDD.ipynb
+++ b/parrot_xDD.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +58,14 @@
      "text": [
       "https://geodeepdive.org/api/snippets?term=\"parrot+management\"&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=parrot+management&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"parakeet+management\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parakeet+management&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=\"management+of+parrot\"&clean&full_results\n",
       "https://geodeepdive.org/api/snippets?term=parrot+control&clean&full_results\n",
-      "https://geodeepdive.org/api/snippets?term=\"control+for+parrot\"&clean&full_results\n"
+      "https://geodeepdive.org/api/snippets?term=parakeet+control&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"control+for+parrot\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=\"control+for+parakeet\"&clean&full_results\n",
+      "https://geodeepdive.org/api/snippets?term=parakeet+eradication&clean&full_results\n"
      ]
     }
    ],
@@ -72,16 +77,23 @@
     "#Set a term or loop through terms #this isn't doing exact phrase properly..\n",
     "terms = ['\"parrot+management\"',\n",
     "         'parrot+management', \n",
+    "         '\"parakeet+management\"',\n",
+    "         'parakeet+management', \n",
     "         #'\"psittacid+management\"', # no results...\n",
     "         #'psittacid+management', # no results...\n",
     "         '\"management+of+parrot\"', \n",
+    "         # 'management+of+parakeet',# no results...\n",
     "         #'\"management+of+psittacid\"', # no results...\n",
     "         #'\"managing+parrot\"' , # one medical result (parrot bites :D)...\n",
     "         #'\"managing+psittacid\"', # no results... \n",
     "         #'culling+parrot', # no results...\n",
     "         #'parrot+cull', # no results...\n",
     "         'parrot+control', \n",
+    "         'parakeet+control',\n",
     "         '\"control+for+parrot\"',\n",
+    "         '\"control+for+parakeet\"',\n",
+    "         # 'parrot+eradication', # no results...\n",
+    "         'parakeet+eradication'\n",
     "         #'parrot*cull',# no results...\n",
     "         # '\"cull+of+parrot\"', # no results...\n",
     "         # spanish/portugeuse terms\n",
